--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch==1.13.1
-torchvision==0.14.1
-pillow==9.3.0
-gradio==3.0.15
+torch>=2.2.0
+torchvision>=0.15.0
+pillow>=9.3.0
+gradio>=3.0.15
 gunicorn
 numpy
 requests
