--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
+torch>=2.0.0,<3.0.0
+torchvision>=0.15.0,<0.16.0
 -f https://download.pytorch.org/whl/torch_stable.html
 pillow>=9.3.0
 gradio>=3.0.15
