--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 torch>=2.0.0
 torchvision>=0.15.0
 -f https://download.pytorch.org/whl/torch_stable.html
-pillow>=9.3.0
 gradio>=3.0.15
 gunicorn
+pillow
 numpy
